...

    </android.inputmethodservice.KeyboardView>



    <ImageButton
        android:id="@+id/btn_add_expend_item_food"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:clickable="true"
...
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_expend_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_entertainment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_entertainment"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_food"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_clothes"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_expend_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_clothes"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_clothes"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_entertainment"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_pet"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_expend_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_pet"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_makeup"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_clothes"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_houserent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_expend_item" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_houserent"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:text="@string/houserent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_expend_item_houserent" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_medicine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:clickable="true"
...
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_medicine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_shopping"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_shopping"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_medicine"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_traffic"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_traffic"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_traffic"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_shopping"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_tour"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_tour"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_tour"
        app:layout_constraintLeft_toRightOf="@id/btn_add_expend_item_traffic"
        app:layout_constraintRight_toLeftOf="@id/btn_add_expend_item_study"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/btn_add_expend_item_study"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
