<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.item.AddExpendItemFragment"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linear_layout_add_income_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="21dp"
        android:layout_marginHorizontal="30dp"
        android:padding="12dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_add_income_item_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingVertical="15dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="请选择类型"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_add_income_item_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:hint="0"
            android:textColorHint="@color/white"
            android:background="@null"
            android:paddingEnd="25dp"
            android:paddingVertical="15dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keyBoard">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_time"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/edit_time_select_resize"
            android:drawablePadding="8dp"
            android:background="@drawable/btn_background"
            android:text="2021=1=1"
            android:textSize="12sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/et_remarks"
            android:background="@null"
            android:hint="添加备注..."
            android:textSize="12sp"
            android:layout_weight="12"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:paddingHorizontal="15dp"
            android:gravity="center_vertical"
            />

    </LinearLayout>

    <!--自定义软键盘-->
    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:keyBackground="@color/white"
        android:keyTextColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:shadowColor="@color/grey_f3f3f3"
        android:shadowRadius="0.0"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </android.inputmethodservice.KeyboardView>

    <ImageButton
        android:id="@+id/btn_add_income_item_salary"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_salary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income_item"/>
    <ImageButton
        android:id="@+id/btn_add_income_item_winning"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_winning"
        android:layout_marginTop="18dp"
        app:layout_constraintLeft_toRightOf="@id/btn_add_income_item_salary"
        app:layout_constraintRight_toLeftOf="@id/btn_add_income_item_investment"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income_item"/>
    <ImageButton
        android:id="@+id/btn_add_income_item_investment"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_investment"
        android:layout_marginTop="18dp"
        app:layout_constraintLeft_toRightOf="@id/btn_add_income_item_winning"
        app:layout_constraintRight_toLeftOf="@id/btn_add_income_item_business"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income_item"/>
    <ImageButton
        android:id="@+id/btn_add_income_item_business"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_marginHorizontal="100dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_business"
        android:layout_marginTop="18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income_item" />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/salary"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_income_item_salary"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/winning"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_income_item_winning"
        app:layout_constraintLeft_toRightOf="@id/tv1"
        app:layout_constraintRight_toLeftOf="@id/tv3"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/investment"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_income_item_investment"
        app:layout_constraintLeft_toRightOf="@id/tv2"
        app:layout_constraintRight_toLeftOf="@id/tv4"/>
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:text="@string/business"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_income_item_business"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>